# moderate-infrastructure

./: .gitignore  .trivyignore  CLAUDE.md  LICENSE  README.md  Taskfile.yml
.trunk/: trunk.yaml
cli/: .dockerignore  .gitignore  Dockerfile  echo  pyproject.toml
cli/moderatecli/: keycloak.py  main.py  postgis.py  postgres.py  utils.py
cli/moderatecli/kc/: __init__.py  flows.py
cli/moderatecli/kc/data/: __init__.py  apisix_client.json  open_metadata_client.json  ui_client.json
gcp_common/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
gcp_prod/: .terraform.lock.hcl  main.tf  variables.tf
modules/apisix/: apisix.yaml.tftpl  config.yaml.tftpl  main.tf  outputs.tf  variables.tf
modules/artifact_registry/: github_oidc.tf  main.tf  outputs.tf  sa_key.tf  variables.tf
modules/cert_manager/: cloud_dns.tf  issuer.tf  main.tf  outputs.tf  providers.tf  variables.tf
modules/cloud_dns_ksa/: main.tf  outputs.tf  variables.tf
modules/dagster/: main.tf  variables.tf
modules/dev_compute_instance/: main.tf  outputs.tf  variables.tf
modules/docs_app/: main.tf  variables.tf
modules/geoserver/: main.tf  outputs.tf  variables.tf
modules/gke_cluster/: backup.tf  iam.tf  main.tf  network.tf  outputs.tf  variables.tf
modules/keycloak/: main.tf  outputs.tf  realm.json.tftpl  variables.tf
modules/keycloak_init/: main.py  main.tf  outputs.tf  variables.tf
modules/moderate_api/: gcs.tf  main.tf  outputs.tf  ui.tf  variables.tf
prod_gcp/: .terraform.lock.hcl  main.tf  variables.tf
scripts/: load-cloud-sql-dump.sh  transform-pem-keypair.sh  update-dns.sh
(+41 files in other folders)
